--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,23 @@
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/fisDevDB
+spring.datasource.username=fis
+spring.datasource.password=fis
 
-###
-#   Database Settings
-###
-spring.datasource.url=jdbc:h2:mem:FisDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.platform=h2
-spring.datasource.username = sa
-spring.datasource.password =
-spring.datasource.driverClassName = org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.http.multipart.max-file-size=5MB
+spring.http.multipart.max-request-size=5MB
+ 
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 
-###
-#   H2 Settings
-###
-spring.h2.console.enabled=true
-spring.h2.console.path=/console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
-
-###
-#   Hibernate Settings
-###
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.use_sql_comments=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type=INFO
 
 com.googlemaps.fisAPIKey = AIzaSyCDjYCKFleuNhTI8ZIhlPk4EFmZVLH7EEo
